[package]
name = "trippy-compiler-core"
version = "0.0.1"
edition = "2021"
license = "MIT"

[dependencies]
ariadne = "0.1.5"
chumsky = { git = "https://github.com/zesterer/chumsky" } 
trippy = { path = "../parser" }
miette = "4.7.1"
thiserror = "1.0.31"
cranelift = "0.84.0"
cranelift-module = "0.84.0"
cranelift-jit = "0.84.0"
cranelift-object = "0.84.0"
